--- a/2.html
+++ b/2.html
@@ -12,6 +12,7 @@
         border: 1px solid #000;
         margin: 10px;
         padding: 20px;
+        background: lightgrey;
       }
       li.userActive {
         border: 1px solid #000;
@@ -19,6 +20,9 @@
         padding: 20px;
         font-weight: bold;
         background: yellow;
+      }
+      li.userWithBorder {
+        border-width: 20px;
       }
     </style>
   </head>
