--- a/2.html
+++ b/2.html
@@ -30,13 +30,15 @@
     <table>
       <tr>
         <td valign="top">
-          <h1>User list</h1>
           <ul id="usersListNode">
           </ul>
         </td>
         <td valign="top">
-          <h1>User info</h1>
-          <div id="userInfoNode"></div>
+          <div id="userInfoNode">
+            <h1>{{name}}</h1>
+            <img src="{{avatar}}">
+            <h3>{{info}}</h3>
+          </div>
         </td>
       </tr>
     </table>
