template with array fields

--- a/2.html
+++ b/2.html
@@ -35,7 +35,7 @@
         </td>
         <td valign="top">
           <div id="userInfoNode">
-            <h1>{{name}}</h1>
+            <h1>{{name}} {{second}}</h1>
             <img src="{{avatar}}">
             <h3>{{info}}</h3>
           </div>
