object.keys for user

--- a/2.html
+++ b/2.html
@@ -38,6 +38,7 @@
             <h1>{{name}} {{second}}</h1>
             <img src="{{avatar}}">
             <h3>{{info}}</h3>
+            <p>{{newfield}}</p>
           </div>
         </td>
       </tr>
