--- a/2.html
+++ b/2.html
@@ -24,6 +24,12 @@
       li.userWithBorder {
         border-width: 20px;
       }
+      li.additionalUser
+      {
+        background: lime;
+        font-family: 'PT Sans';
+        color:grey;
+      }
     </style>
   </head>
   <body>
