--- a/2.html
+++ b/2.html
@@ -15,9 +15,6 @@
         background: lightgrey;
       }
       li.userActive {
-        border: 1px solid #000;
-        margin: 10px;
-        padding: 20px;
         font-weight: bold;
         background: yellow;
       }
@@ -44,6 +41,7 @@
       </tr>
     </table>
 
+    <script src="vendor/jquery-1.12.2.min.js"></script>
     <script src="2.js"></script>
     <script>
       drawUsers(users);
