--- a/mustache_added_cool_html_jQuery.html
+++ b/mustache_added_cool_html_jQuery.html
@@ -49,10 +49,10 @@
       </tr>
     </table>
 
-    <script src="21_modified.js"></script>
-    <script>
-      drawUsers(users);
-    </script>
+ 
+    
+       <script src="mustache_added_cool_info_jQuery.js"></script>
+     
    
   </body>
 </html>
