--- a/2 _toggle.html
+++ b/2 _toggle.html
@@ -2,7 +2,6 @@
 <html>
   <head>
     <meta charset="utf-8">
-      <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mustache.js/2.2.1/mustache.min.js"></script>
     <title></title>
     <style>
       ul {
@@ -42,18 +41,18 @@
         </td>
         <td valign="top">
           <div id="userInfoNode">
-            
+            <h1>{{name}} {{second}}</h1>
+            <img src="{{avatar}}">
+            <h3>{{info}}</h3>
+            <p>{{newfield}}</p>
           </div>
         </td>
       </tr>
     </table>
 
-    <script src="21_modified.js"></script>
+    <script src="2_toggle.js"></script>
     <script>
       drawUsers(users);
-    </script>
-    <script type="text/javascript">
-      
     </script>
   </body>
 </html>
