--- a/mustache_added_cool_html.html
+++ b/mustache_added_cool_html.html
@@ -48,10 +48,8 @@
       </tr>
     </table>
 
-    <script src="21_modified.js"></script>
-    <script>
-      drawUsers(users);
-    </script>
+    <script src="mustache_added_cool_info.js"></script>
+    
    
   </body>
 </html>
