stopPropagation + click simulation

--- a/3.html
+++ b/3.html
@@ -17,7 +17,7 @@
       <div>empty div</div>
       <div>
         <input type="text" name="name" value="">
-        <p>
+        <p id="par1">
           <span>span text</span>
           <button type="button" id="button" name="button">click me</button>
         </p>
