--- a/3.html
+++ b/3.html
@@ -20,6 +20,7 @@
         <p id="par1">
           <span>span text</span>
           <button type="button" id="button" name="button">click me</button>
+          <button type="button" id="button2" name="button">click me</button>
         </p>
       </div>
     </div>
