--- a/5.html
+++ b/5.html
@@ -6,13 +6,30 @@
   </head>
   <body>
     <script type="text/javascript">
-      var count = 0;
-      function click(){
-        count++;
+      window.Counter = function(){
+        var count = 0;
+
+        this.click = function(){
+          count++;
+        };
+        this.getCount = function(){
+          return count;
+        };
+      };
+
+      var c1 = new Counter();
+      var c2 = new Counter();
+
+      for(var i=0; i< 23; i++){
+        c1.click();
       }
-      function getCount(){
-        return count;
+
+      for(var j=0; j< 76; j++){
+        c2.click();
       }
+
+      console.log(c1.getCount());
+      console.log(c2.getCount());
     </script>
   </body>
 </html>
