--- a/5.html
+++ b/5.html
@@ -7,29 +7,49 @@
   <body>
     <script type="text/javascript">
       window.Counter = function(){
-        var count = 0;
-
+        this.count = 0;
         this.click = function(){
-          count++;
+          this.count++;
         };
         this.getCount = function(){
-          return count;
+          return this.count;
         };
       };
 
-      var c1 = new Counter();
-      var c2 = new Counter();
-
-      for(var i=0; i< 23; i++){
-        c1.click();
+      window.Counter2 = function(){
+        this.count = 0;
+      };
+      window.Counter2.prototype = {
+        click: function(){
+          this.count++;
+        },
+        getCount: function(){
+          return this.count;
+        },
       }
 
-      for(var j=0; j< 76; j++){
-        c2.click();
+      var c11 = new Counter();
+      var c12 = new Counter();
+
+      var c21 = new Counter2();
+      var c22 = new Counter2();
+
+      c11.click = function(){
+        this.count += 10;
       }
 
-      console.log(c1.getCount());
-      console.log(c2.getCount());
+      c21.click();
+      console.log( c21.getCount() ); // 1
+
+      window.Counter2.prototype.click = function(){
+        this.count += 3;
+      }
+
+      c21.click();
+      c22.click();
+      console.log( c21.getCount() ); // 3, 4
+      console.log( c22.getCount() );
+
     </script>
   </body>
 </html>
