--- a/5.html
+++ b/5.html
@@ -50,6 +50,18 @@
       console.log( c21.getCount() ); // 3, 4
       console.log( c22.getCount() );
 
+
+      var b = [1,34,5]
+      // b.anotherMethod()
+      Array.prototype.anotherMethod = function(){ return this[2] }
+      (){ return this[2] }
+      b.anotherMethod()
+      var a = [2,3,4];
+      a.anotherMethod()
+      a.anotherMethod = function(){ return this[0] }
+      (){ return this[0] };
+      b.anotherMethod()
+
     </script>
   </body>
 </html>
