--- a/5.html
+++ b/5.html
@@ -39,7 +39,7 @@
       }
 
       c21.click();
-      console.log( c21.getCount() ); // 1
+      // console.log( c21.getCount() ); // 1
 
       window.Counter2.prototype.click = function(){
         this.count += 3;
@@ -47,21 +47,70 @@
 
       c21.click();
       c22.click();
-      console.log( c21.getCount() ); // 3, 4
-      console.log( c22.getCount() );
+      // console.log( c21.getCount() ); // 3, 4
+      // console.log( c22.getCount() );
 
-
+/*
       var b = [1,34,5]
       // b.anotherMethod()
       Array.prototype.anotherMethod = function(){ return this[2] }
-      (){ return this[2] }
       b.anotherMethod()
       var a = [2,3,4];
       a.anotherMethod()
       a.anotherMethod = function(){ return this[0] }
       (){ return this[0] };
       b.anotherMethod()
+*/
 
+      /*
+          TODO create new Array like object
+          with sum, average, hash methods;
+      */
+      // OPTION 1
+      function MyArray(){
+        var array = new Array();
+        array.sum = function(){
+          var sum = 0;
+          this.forEach(function(item){
+            sum += item;
+          });
+          return sum;
+        };
+        array.average = function(){};
+        array.hash = function(){};
+        return array;
+      }
+
+      var a = new MyArray();
+      a.push(1);
+      a.push(2);
+      a.push(3);
+      console.log( a.sum() );
+
+      var b = new MyArray();
+      console.log( a.sum == b.sum )
+
+
+      // OPTION 2
+      function MyArray2(){}
+      MyArray2.prototype = new Array();
+      // MyArray2.prototype = Array.prototype;
+      MyArray2.prototype.sum = function(){
+        var sum = 0;
+        this.forEach(function(item){
+          sum += item;
+        });
+        return sum;
+      };
+
+      var a = new MyArray2();
+      a.push(1);
+      a.push(2);
+      a.push(3);
+      console.log(a.sum());
+
+      var b = new MyArray2();
+      console.log( a.sum == b.sum )
     </script>
   </body>
 </html>
