some forgotten changes

--- a/5.html
+++ b/5.html
@@ -112,5 +112,9 @@
       var b = new MyArray2();
       console.log( a.sum == b.sum )
     </script>
+
+<span lang:en="asdasdasdasd" lang:de="sdfdssdfdfsdf"></span>
+
+
   </body>
 </html>
