--- a/11.html
+++ b/11.html
@@ -10,6 +10,9 @@
       <li><a href="#users">users</a></li>
       <li><a href="#about">about</a></li>
     </ul>
+    <div id="content">
+      content will be here
+    </div>
     <script src="11.js"></script>
     <script>
       window.addEventListener('hashchange', function(){
